[package]
name = "translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
dirs = "4.0"
toml = "0.5"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
chrono = "0.4"
futures = "0.3"
console = "0.15"
serde_json = "1.0"
base64 = "0.20.0-alpha.1"
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.20", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
strip = true
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1